openshift/dex-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dex-example
  name: dex-example
  namespace: test
spec:
  ports:
  - name: port-1
    port: 5556
    protocol: TCP
    targetPort: 5556
  - name: port-2
    port: 5557
    protocol: TCP
    targetPort: 5557
  - name: port-3
    port: 5558
    protocol: TCP
    targetPort: 5558
  selector:
    name: dex-example
  type: ClusterIP
