openshift/spring-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-dex-test
    app.kubernetes.io/component: spring-dex-test
    app.kubernetes.io/instance: spring-dex-test
  name: spring-dex-test
  namespace: test
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deployment: spring-dex-test
  type: ClusterIP
